use toList();